--- a/templates/editor.mustache
+++ b/templates/editor.mustache
@@ -60,7 +60,7 @@ Example context (json):
         <i class="position-absolute bi bi-grip-vertical"></i>
     </div>
     <div class="p-3 position-relative" id="content-region">
-        <div class="w-100 h-100 overflow-auto border iv-rounded-lg" id="contentblock">
+        <div class="w-100 h-100 overflow-auto border iv-rounded-lg position-relative" id="contentblock">
             {{! action bar }}
             <div id="video-action"
                  class="px-3 py-2 bg-light d-flex align-items-center justify-content-between mx-auto w-100 position-sticky">
