--- a/templates/reporttable.mustache
+++ b/templates/reporttable.mustache
@@ -40,7 +40,7 @@ Example context (json):
            class="table table-sm table-bordered border table-striped w-100 m-0">
         <thead class="sticky-top bg-white">
             <tr>
-                <th id="id">{{#str}}id,mod_interactivevideo{{/str}}</th>
+                <th id="id" class="exportable inv">{{#str}}id,mod_interactivevideo{{/str}}</th>
                 <th id="participant" class="bg-white sticky-left-0">{{#str}}participant,mod_interactivevideo{{/str}}</th>
                 <th id="firstname" class="exportable colvis inv profilefield">{{#str}}firstname{{/str}}</th>
                 <th id="lastname" class="exportable colvis inv profilefield">{{#str}}lastname{{/str}}</th>
