--- a/templates/playermodal.mustache
+++ b/templates/playermodal.mustache
@@ -29,7 +29,7 @@ Example context (json):
         <div class="modal-content {{#showcontrols}}show-control{{/showcontrols}} iv-rounded-0 border-0">
             <div class="modal-header border-0 text-white align-items-center py-0 h-0 position-absolute w-100 z-index-1 iv-rounded-0">
                 <div class="modal-background w-100 position-absolute"></div>
-                <span class="modal-title position-relative z-index-1 d-flex align-items-center overflow-hidden"
+                <span class="modal-title flex-grow-0 position-relative z-index-1 d-flex align-items-center overflow-hidden"
                       id="playermodalLabel">
                     <span class="h5 mb-0">
                         <button type="button"
@@ -42,7 +42,7 @@ Example context (json):
                         </button>
                     </span>
                 </span>
-                <div class="modal-action d-flex align-items-center position-relative z-index-1">
+                <div class="iv-ml-auto modal-action d-flex align-items-center position-relative z-index-1">
                     <div class="d-none d-sm-block small" data-region="activity-completion"></div>
                     <span class="btn iv-ml-2 border-0 h5 mb-0 lock-bar"
                           title="{{#str}}lock,mod_interactivevideo{{/str}}"
