--- a/templates/addcontenttype.mustache
+++ b/templates/addcontenttype.mustache
@@ -23,7 +23,7 @@
     {
     }
 }}
-<div class="modal fade" id="contentmodal" role="dialog" aria-labelledby="contentmodal" aria-hidden="true">
+<div class="modal fade" id="contentmodal" role="dialog" aria-labelledby="contentmodal" aria-hidden="true" tabindex="-1">
     <div class="modal-dialog modal-dialog-scrollable" role="document">
         <div class="modal-content iv-rounded-lg">
             <div class="modal-header align-items-center flex-column">
@@ -58,7 +58,6 @@
                             <p class="iv-font-weight-light mb-0">{{{description}}}</p>
                             {{/description}}
                             </div>
-
                     </span>
                 {{/hideonchooser}}
                 {{/contenttype}}
