--- a/templates/playermodal.mustache
+++ b/templates/playermodal.mustache
@@ -22,6 +22,7 @@ Example context (json):
      id="playermodal"
      data-backdrop="static"
      data-keyboard="false"
+     data-bs-backdrop="static" data-bs-keyboard="false"
      tabindex="-1"
      aria-labelledby="playermodalLabel"
      aria-hidden="true">
